apps/kubeview/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeview
  namespace: kubeview
spec:
  rules:
    - host: kubeview.ai.hotosm.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubeview
                port:
                  number: 8000
  tls:
    - hosts:
        - kubeview.ai.hotosm.org
      secretName: kubeview-tls
