apps/kubeview/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeview
  namespace: kubeview
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: "kubeview.ai.hotosm.org"
    external-dns.alpha.kubernetes.io/ttl: "300"
    
    # Basic Authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: kubeview-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  rules:
    - host: kubeview.ai.hotosm.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubeview
                port:
                  number: 8000
  tls:
    - hosts:
        - kubeview.ai.hotosm.org
      secretName: kubeview-tls
